--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "electron-updater": "^6.3.9",
-    "@langchain/core": "0.3.6",
+    "@langchain/core": "^0.3.9",
     "@langchain/langgraph": "^0.2.28",
     "@langchain/openai": "^0.2.1",
     "@langchain/community": "^0.3.1",
@@ -75,6 +75,6 @@
     "vitest": "^2.1.5"
   },
   "overrides": {
-    "@langchain/core": "0.3.6"
+    "@langchain/core": "^0.3.9"
   }
 }
