--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "check:fix": "npm run type-check && npm run lint:fix"
   },
   "dependencies": {
-    "electron-updater": "^6.3.9",
+    "@langchain/community": "^0.3.1",
     "@langchain/core": "^0.3.9",
     "@langchain/langgraph": "^0.2.28",
     "@langchain/openai": "^0.2.1",
-    "@langchain/community": "^0.3.1",
-    "@supabase/supabase-js": "^2.39.3",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.6.1",
+    "electron-updater": "^6.3.9",
     "openai": "^4.67.3",
-    "uuid": "^9.0.1",
-    "dotenv": "^16.4.5"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
