--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "^5.4.2",
     "typescript-eslint": "^8.35.1",
+    "undici": "^7.11.0",
     "vite": "^5.4.11",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
