--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "check:fix": "npm run type-check && npm run lint:fix"
   },
   "dependencies": {
+    "@composio/core": "^0.1.35",
+    "@composio/langchain": "^0.1.35",
     "@langchain/community": "^0.3.1",
     "@langchain/core": "^0.3.9",
     "@langchain/langgraph": "^0.2.28",
